# Resume-Builder

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
Backend/: .env  index.js  package-lock.json  package.json
Backend/src/api/routes/: user.route.js  (+4 more)
Backend/src/config/: database.js
Backend/src/controller/: careerPath.controller.js  matchJob.controller.js  matchSkills.controller.js  resume.controller.js  user.controller.js
Backend/src/middleware/: auth.middleware.js
Backend/src/models/: resume.model.js  user.model.js
Backend/src/services/: careerPath.service.js  matchJob.service.js  matchSkills.service.js  parsingOrchestrator.service.js  resumeBuilder.service.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  SkillGapFinder.jsx  main.jsx
frontend/src/pages/: Dashboard.jsx  InterviewMentor.jsx  LandingPage.jsx  Resourses.jsx  ResumeAnalyzer.jsx  Roadmap.jsx  SkillGapFinder.jsx
frontend/src/store/: resumeSlice.js  store.js
ml-service/: README.md  pyproject.toml  requirements.txt
ml-service/src/: main.py
ml-service/src/api/routes/: resume.py
ml-service/src/ml/: analyzer.py  ats_checker.py  career_path_model.py  nlp_pipeline.py  output.py  preprocess.py  recommendation.py  resume_optimizer.py  similarity.py  skill_gap.json  skill_gap_analysis.py  skills.json
ml-service/src/ml/data_model/: ats_vectorizer.pkl  job_keywords.pkl  job_roles_dataset_expanded.csv  vectorizer.pkl
ml-service/tests/: check.py  test_nlp_basic.py
src/ml/: nlp_pipeline.py  preprocess.py  requirements.txt  similarity.py
(+3 files in other folders)
