[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Soumyadeep143",email = "soumyadeep735221@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "spacy (>=3.8.7,<4.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
